Make sure notices are visible

--- a/src/css/dappier-settings.css
+++ b/src/css/dappier-settings.css
@@ -187,12 +187,15 @@ textarea:focus-visible {
 	}
 }
 
+.dappier-form,
+.dappier-inner__sidebar {
+	margin-top: 36px;
+}
+
 .dappier-form {
 	display: grid;
 	gap: 24px;
 }
-
-.dappier-form:has()
 
 .dappier-preheading {
 	margin-bottom: 8px;
